--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
-    "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.0.10"
   },
   "engines": {
     "node": ">= 0.12.0"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://enjambrebit.github.io/enjambre-componentes/"
   }
 }
