--- a/circle.yml
+++ b/circle.yml
@@ -7,3 +7,8 @@ dependencies:
     - sudo apt-get update; sudo apt-get install -y --only-upgrade google-chrome-stable
   post:
     - bower install
+deployment:
+  production:
+    branch: master
+    commands:
+      - npm run deploy
