--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
+    "ember-validated-form": "0.5.1",
     "loader.js": "^4.0.10"
   },
   "engines": {
